// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextareaDeprecated /> is checked shouldComponentUpdate 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<TextareaDeprecated /> is checked shouldComponentUpdate with new props 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;

exports[`<TextareaDeprecated /> it label and id 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <InputLabel
    htmlFor="id"
  >
    label
  </InputLabel>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
        id="id"
      />
    </div>
  </div>
</div>
`;

exports[`<TextareaDeprecated /> it renders TextareaDeprecated 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;

exports[`<TextareaDeprecated /> it renders error icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<TextareaDeprecated /> it renders texts 1`] = `
<div
  className="mfui-textarea mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_comment"
  >
    text
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_success"
  >
    text
  </div>
</div>
`;

exports[`<TextareaDeprecated /> it renders valid icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_valid mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
  <div
    className="mfui-textarea__text mfui-textarea__text_error"
  >
    text
  </div>
</div>
`;

exports[`<TextareaDeprecated /> it renders without error icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_error mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;

exports[`<TextareaDeprecated /> it renders without valid icon 1`] = `
<div
  className="mfui-textarea mfui-textarea_valid mfui-textarea_color_default"
>
  <div
    className="mfui-textarea__field-wrapper mfui-textarea__field-wrapper_no-touch"
  >
    <div>
      <textarea
        autoComplete="off"
        className="mfui-textarea__field"
      />
    </div>
  </div>
</div>
`;
